11449 Fixed up the vertical align of the help images. Reduced the overlarge font-size for box.th a.

--- a/css/style_default_5.css
+++ b/css/style_default_5.css
@@ -159,6 +159,7 @@ select:focus.bad
 }
 .help_button {
   border:1px solid #999999;
+  vertical-align:sub !important; vertical-align:bottom;
 }
 .help_button:hover {
   border:1px solid #cccccc;
@@ -211,12 +212,10 @@ table.box th.right table {
 table.box th a:link, table.box th a:visited { 
   font-weight:bold; 
   color:#003d76; 
-  font-size:110%; 
 }
 table.box th a:hover { 
   font-weight:bold; 
   color:#688db0; 
-  font-size:110%; 
 }
 
 /* Calendar */
